# STEVIE

./: CMakeLists.txt  Makefile  alloc.c  cmdline.c  edit.c  fileio.c  fontpc.s  help.c  hexchars.c  main.c  mark.c  misccmds.c  normal.c  param.c  ptrfunc.c  regexp.c  regexp.h  regsub.c  screen.c  search.c  stevie.h  stevie.prj  tos.c
